<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CineMetro Thess</string>
    <string name="language">en</string>
    <string name="map_button">Navigation</string>
    <string name="lines_button">Lines</string>
    <string name="profile_button">Profile</string>
    <string name="about_button">About</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="map_activity">Map activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lines">LinesActivity</string>
    <string name="lines_activity">Lines activity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_activity">Profile activity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_ViewStation">Movie</string>
    <string name="title_activity_ViewCinema">Cinema</string>
    <string name="title_activity_RateActivity">Rating</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="Email">E-mail:</string>
    <string name="PasswordText">Password:</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_when_retrieving_data">error with data</string>
    <string name="direct"> Director </string>
    <string name="cast"> Cast: </string>
    <string name="info"> Information </string>
    <string name="rate"> Rate this station </string>
    <string name="points"> Points </string>
    <string name="rate_button"> Rate </string>
    <string name="skip"> Skip </string>
    <string name="noApp"> This application is not installed </string>
    <string name="select_language"> Select Language </string>
    <string name="left_scroll_item1">Profile</string>
    <string name="left_scroll_item2">Language</string>
    <string name="save">Save</string>
    <string name="must_sign_up">You should log in order to rate for this station </string>
    <string name="already_rate">You have rate for this station </string>
    <string name="about_text1">            \n\tCine Metro is an application for mobile phones and tablets, which is designed and developed voluntarily by a student group of the
    Informatics Department of the Aristotle University of Thessaloniki, under the guidance of professor Athena Vakali,
    in collaboration with Dr Angeliki Milonaki (journalist, film historian) and Yannis Grosdanis (journalist, film critic).
    The students joining the developers team are George Haristos, who developed and designed the ios app and for the Android app
    Vaena Paraskevi, Kaltirimidou Effrosyni, Paniskaki Kyriaki, Papazoglou Christos-Panagiotis and Syrtari Charikleia.</string>
    <string name="about_text2">        \n\t The application is an educational tool aiming at informing as well as familiarizing the public about Thessaloniki’s rich
    cinematic history through a modern navigation experience in the city.
    Various city’s landmarks, which are linked to films shot in Thessaloniki, will be used as “stations”, where citizens can step
    by in order to see what’s available (e.g. photos, texts, videos, podcasts, etc).</string>
    <string name="about_text3">        \n\t Image rights are held by the respective copyright owners as indicated in the app.
    \n\tPhotographs used in the application are kindly granted exclusively for educational purposes by the archives of
    the Thessaloniki International Film Festival, Finos Films and Theo Angelopoulos’ Society.</string>
    <string name="station_text">Station</string>
    <string name="line1_title">The cinemas of Thessaloniki</string>
    <string name="line2_title">Thessaloniki in Greek cinema</string>
    <string name="line3_title">Timeline</string>
    <string name="tab1">Cinemas</string>
    <string name="tab2">Movies</string>
    <string name="tab3">Timeline</string>
    <string name="confirm">Confirm password:</string>
    <string name="gps_on">GPS is enabled.</string>
    <string name="gps_off">GPS is not enabled.</string>
    <string name="no_connection">You must be connected to the internet.</string>
    <string name="database_update">Database was updated successfully!</string>
    <string name="bye">  Bye!</string>
    <string name="warning">Warning</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="logout_message">If you sign out without updating the database you will lose all the points you gave after your last login. Update the database before quiting?</string>
    <string name="user_exists">User already exists.</string>
    <string name="user_not_exist">User may not exist.Please try again.</string>
    <string name="password_length">Password must be at least 5 characters.</string>
    <string name="password_wrong">Wrong password.</string>
    <string name="password_not_match">Passwords do not match.</string>
    <string name="success_text">You are ready!!!\nTouch the End button to Sign Up!</string>
    <string name="undo_change">Undo the change and try again!</string>
    <string name="congrats_text">Congrats!\nYou successfully signed up!</string>
    <string name="inf">\n\n Information \n</string>
    <string name="director">Director:</string>
    <string name="playing">Starring:</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_out_button">Log Out</string>
    <string name="log_in_button">Log In</string>
    <string name="check_button">Check</string>
    <string name="end_button">End</string>
    <string name="total_points">Total points:</string>
    <string name="stations_rated">Stations rated</string>
    <string name="update_button">Update database</string>
    <string name="red">Red line:    </string>
    <string name="blue">Blue line:   </string>
    <string name="green">Green line:  </string>
    <string name="no_Line">No Line</string>
    <string name="Wifi_Enabled">Wi-fi Enabled</string>
    <string name="Wifi_Disabled">Wi-Fi Disabled</string>
    <string name="GPS_Enabled">GPS Enabled</string>
    <string name="GPS_Disabled">GPS Disabled</string>
    <string name="back_button"> &lt; LINES</string>
    <string name="Linew_menu_button">Lines</string>
    <string name="title_activity_tabed_lines">Lines</string>
    <string name="rated_stations">Stations Rated</string>
    <string name="viewholder">viewHolder</string>

</resources>
