<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cinemetroproject.cinemetro.SignUp"
    android:background="@drawable/background1">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:id="@+id/help1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="#fffff9f8"
            android:alpha=".7">

            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/eMail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/Email"
                android:textSize="25sp"
                android:textColor="#ffe23543"
                android:layout_gravity="center_horizontal"
                />
            <EditText
                android:id="@+id/eMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView_pass"
                android:layout_toRightOf="@+id/textView_pass"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffe23543"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textView_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewProfile"
                android:layout_marginTop="26dp"
                android:text="@string/PasswordText"
                android:textSize="25sp"
                android:textColor="#ffe23543"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/pass1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView_pass"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:text=""
                android:textColor="#ffe23543"/>

            <TextView
                android:id="@+id/email2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView_pass"
                android:layout_marginTop="28dp"
                android:layout_toLeftOf="@+id/eMail"
                android:layout_toStartOf="@+id/eMail"
                android:text="@string/confirm"
                android:textSize="25sp"
                android:textColor="#ffe23543"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/pass2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/email2"
                android:layout_alignLeft="@+id/pass1"
                android:layout_alignStart="@+id/pass1"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:text=""
                android:textColor="#ffe23543"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text=""
                android:id="@+id/help2" />

            <Button
                android:id="@+id/check_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_above="@+id/End_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/check_button"
                android:background="@drawable/cinemetro_button"
                android:textColor="#ffe23543"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/success"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffe23543"
                android:textSize="20sp"
                android:background="#fffff9f8"
                android:alpha=".7"/>

            <Button
                android:id="@+id/End_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="50dp"
                android:enabled="false"
                android:text="@string/end_button"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/cinemetro_button"
                android:textColor="#ffe23543"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
